Name:                Vector2
Version:             0.1
Synopsis:            A polymorphic strict Vector2 data-type with useful instances.
License:             BSD3
License-file:        LICENSE
Author:              Eyal Lotem
Maintainer:          eyal.lotem+hackage@gmail.com
Build-type:          Simple
Cabal-version:       >=1.2
Library
  hs-Source-Dirs:    src
  Build-Depends:     base >= 4 && < 5, binary >= 0.5 && < 0.6, array >= 0.2 && < 0.4
  Exposed-modules:   Data.Vector.Vector2
